--- a/src/UI/Glass/Glass.module.css
+++ b/src/UI/Glass/Glass.module.css
@@ -1,8 +1,11 @@
 .glass {
 	width: 50vw;
 	height: 50vh;
-	box-shadow: 0 0 1rem rgba(0, 0, 0, .9);
+	box-shadow: inset 0 0 30px 30px rgba(0, 0, 0, .1);
 	border-radius: 20px;
-	background-color: rgba(222, 222, 222, .4);
-	backdrop-filter: blur(1px);
+	background-color: rgba(255, 255, 255, .4);
+	backdrop-filter: blur(3.5px);
+	padding: 10px;
+	border-top: 3px solid rgba(255, 255, 255, .5);
+	border-left: 2px solid rgba(255, 255, 255, .5);
 }
