--- a/src/Components/LoginForm.module.css
+++ b/src/Components/LoginForm.module.css
@@ -1,9 +1,46 @@
 h3 {
 	text-align: center;
 	font-weight: bold;
-	font-size: 1.5rem;
+	font-size: 2rem;
+	margin: 2rem auto;
 }
 
 label {
 	display: block;
+}
+
+input {
+	width: 75%;
+	margin: 10px auto;
+}
+
+label {
+	display: block;
+	width: 90%;
+	margin: 0 auto;
+	font-size: 1.5rem;
+}
+
+input {
+	margin: 0 auto 1.5rem auto;
+	width: 90%;
+	min-height: 2em;
+	display: block;
+}
+
+input {
+	background-color: #152D37;
+	border: 1px solid #0a0a23;
+	color: #ffffff;
+	border-radius: 150px;
+}
+
+button {
+	display: block;
+	background-color: #32FF6B;
+	margin: 3rem auto;
+	padding: 25px 50px;
+	border-radius: 75px;
+	color: #152D37;
+	font-size: 1.5rem;
 }
