--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,7 +38,7 @@ body {
 } */
 
 .glass {
-	width: 25vw;
+	width: 30vw;
 	/* height: 45vh; */
 	box-shadow: inset 0 0 30px 30px rgba(0, 0, 0, .1);
 	border-radius: 75px;
@@ -95,6 +95,34 @@ body {
 	box-shadow: inset 0 0 30px 30px rgba(0, 0, 0, .1);
 	border-radius: 75px;
 	backdrop-filter: blur(3.5px);
+}
+
+.sidebar .user-level {
+	text-align: center;
+}
+
+.sidebar .level {
+	background-color: antiquewhite;
+	height: 5px;
+	border-radius: 10px;
+}
+
+.sidebar .profile-button {
+	position: fixed;
+	bottom: 1em;
+	background-color: #10702F;
+	border: none;
+	border-radius: 100px;
+	color: #152D37;
+	font-size: 1.5rem;
+	cursor: pointer;
+	color: white;
+	font-size: 2em;
+	padding: .34em;
+}
+
+.sidebar .p {
+	font-size: 5rem;
 }
 
 .posts-h1 {
